# RustyNanoKVM

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
crates/board-support/: Cargo.toml
crates/board-support/src/: atx.rs  gpio.rs  i2c.rs  lib.rs  oled.rs  qr.rs
crates/nanokvm-core/: Cargo.toml
crates/nanokvm-core/src/: config.rs  error.rs  hardware.rs  lib.rs
crates/nanokvm-hid/: Cargo.toml
crates/nanokvm-hid/src/: hid.rs  keyboard.rs  keycodes.rs  lib.rs  mouse.rs
crates/nanokvm-server/: Cargo.toml
crates/nanokvm-server/src/: auth.rs  logger.rs  main.rs  middleware.rs  state.rs  websocket.rs
crates/nanokvm-server/src/api/: application.rs  auth.rs  hid.rs  mod.rs  network.rs  storage.rs  stream.rs  vm.rs
crates/nanokvm-vision/: Cargo.toml
crates/nanokvm-vision/src/: capture.rs  encoder.rs  ffi.rs  hdmi.rs  lib.rs
docker/: Dockerfile.rust
scripts/: manage.sh
