[workspace]
resolver = "2"
members = [
    "crates/nanokvm-server",
    "crates/nanokvm-core",
    "crates/nanokvm-hid",
    "crates/nanokvm-vision",
    "crates/board-support",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["NanoKVM Team"]
license = "GPL-3.0"
repository = "https://github.com/8b-is/RustyNanoKVM"
description = "Compact, open-source IP-KVM device based on RISC-V"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["timeout", "limit", "util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4"] }

# Crypto
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.9"

# WebRTC
webrtc = "0.12"

# Configuration
config = "0.15"

# Utilities
once_cell = "1.20"
parking_lot = "0.12"
bytes = "1.10"
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# Board support
nix = { version = "0.30", features = ["ioctl", "fs", "mount"] }
i2cdev = "0.6"
gpio-cdev = "0.6"
memmap2 = "0.9"

# QR code
qrcode = "0.14"
image = "0.25"

# Testing
rstest = "0.25"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
